--- a/team.html
+++ b/team.html
@@ -1,25 +1,67 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <title></title>
-        <link rel="stylesheet" type="text/css" href="finalstyle.css" />
+<html lang="en">
+<head>
+  <title>Our Team</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="finalstyle.css" />
     </head>
     <body>
-        <ul><li><a href=finalhome.html class="menu ul">Final Landing</a></li>
+        <div class="container-fluid">    
+        <ul class="a"><li><a href=finalhome.html class="menu ul">Final Landing</a></li>
             <li><a href=AboutMe.html>About Me</a></li>
-            <li><a href=team.html>The Team</a></li>
+            <li><a href=team.html>Our Team</a></li>
             <li><a href=tags.html>Tag examples</a></li>
             <li><a href=Calendar.html>Calendar examples</a></li>
             <li><a href=tobuy.html>Classes and IDs</a></li>
             <li><a href=JSFunctions.html>JavaScript Examples</a></li>
         </ul>
+        </div>
+        <div class="container">
+            <div class="jumbotron">
+              <h1>Our Team</h1>      
+              <p>For Peer Review and Weekly Interview assignments, Richelle Cinco and I made an awesome team!</p>
+            </div>
+            <div class="row">
+                <div class="col-sm-4" class="Backline">
+                    <img src="Richelle.jpg" alt="Picture of Richelle">
+                </div>
+                <div class="col-md-6">
+                <p><b>Richelle Cinco was my teammate during this course. Richelle seemed to catch on super quick to the material, so I felt like I won the teammate lottery! <br><br>She has an unmatched eye for style compared to myslef and our other classmates. I believe web design is one of her callings.<br><br>Not only is she a fantastic designer, she's also a supportive teammate and classmate. Richelle is quick to offer help to myself and the other classmates with questions, or if she felt she could assist with any difficulties we may have faced.<br><br>I'm not sure how she does it all, being a mom of two boys and still so dedicated to seeking out new skills and passions for herself. She really is an insperation. I am so glad we got to know a little about eachother through this course.</b></p>
+                </div>
+                <div class="col-sm-2"><br><br><br><br>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 style="text-align: center;">This is a screen capture of our first Zoom meeting.<br><br></h1>
+                    <a href="https://youtu.be/HDVZn1Fpr_Q">
+                    <img src="teamSnip.jpg" alt="picture of Richelle and Kassie in a Zoom Meeting" class="aboutPic">
+                    </a>
+                    <p style="text-align: center">Click the image to watch the video!</p>
+                </div> 
+            </div> 
+        </div> 
+    </div>          
     </body>
     <br>
     <br>
     <br>
     <br>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
     <footer>
-        Developed July-August 2020, mid-pandemic by Kassie McCool
-    </footer>
+            <p>Developed July-August 2020, mid-pandemic by Kassie McCool</p>
+        </footer>
+          </div>
+        </div>
+      </div>
 </html>
