--- a/finalhome.html
+++ b/finalhome.html
@@ -6,21 +6,22 @@
         <link rel="stylesheet" type="text/css" href="finalstyle.css" />
     </head>
     <body>
-        <ul><li><a href=finalhome.html class="menu ul">Final Landing</a></li>
+        <ul class="a"><li><a href=finalhome.html class="menu ul">Home</a></li>
             <li><a href=AboutMe.html>About me</a></li>
-            <li><a href=Bootstrap.html>Week 6 Bootstrap</a></li>
             <li><a href=team.html>The Team</a></li>
+            <li><a href=Assignments.html>Week by Week</a></li>
             <li><a href=tags.html>Tag examples</a></li>
             <li><a href=Calendar.html>Calendar examples</a></li>
             <li><a href=tobuy.html>Classes and IDs</a></li>
             <li><a href=JSFunctions.html>JavaScript Examples</a></li>
+            <li><a href=Bootstrap.html>Week 6 Bootstrap</a></li>
         </ul>
         <center><h1>
-            <b class="blue-text">Hello! My name is Kassie McCool! <br> Welcome to My Ongoing Web Developemnt Journey</b><br>
+            <b class="blue-text">Hello! My name is Kassie McCool! <br> Welcome to My Ongoing Web Development Journey</b><br>
         </h1></center>
         <img src="computercode.jpg" alt="Picture of a computer" class="inner"><br><br>
         <center><p class="text">
-            Funny thing about me, my job title is "Application Development Analyst" turns out, I have lots to learn about development! I do front end development in SharePoint by day. I specialize in automating business processes with workflows. The tool I use to accomplish this is powerful, and if you know how to use it, requires very little development. <br> I've always wanted to learn Web Development, and it was always a daunting task. Now that I'm taking this Web Developemnt course, I've realized, my fear was totally valid. Feel free to brouse my site by clicking the navigation bar at the top of this page. It took about three hours to get it to change color on hover, so be sure notice that seemingly simple feature. </li>
+            Funny thing about me, my job title is "Application Development Analyst" turns out, I have lots to learn about development! I do front end development in SharePoint by day. I specialize in automating business processes with workflows. The tool I use to accomplish this is powerful, and if you know how to use it, requires very little development. <br> I've always wanted to learn Web Development, and it was always a daunting task. Now that I'm taking this Web Development course, I've realized, my fear was totally valid. Feel free to browse my site by clicking the navigation bar at the top of this page. It took about three hours to get it to change color on hover, so be sure notice that seemingly simple feature. </li>
         </p></center>
     </body>
     <br>
