--- a/AboutMe.html
+++ b/AboutMe.html
@@ -11,14 +11,11 @@
     </head>
     <body>
       <div class="container-fluid">       
-        <ul><li><a href=finalhome.html class="menu ul">Final Landing</a></li>
-            <li><a href=AboutMe.html>About me</a></li>
-            <li><a href=team.html>The Team</a></li>
-            <li><a href=tags.html>Tag examples</a></li>
-            <li><a href=Calendar.html>Calendar examples</a></li>
-            <li><a href=tobuy.html>Classes and IDs</a></li>
-            <li><a href=JSFunctions.html>JavaScript Examples</a></li>
-        </ul>
+        <ul class="a"><li><a href=finalhome.html class="menu ul">Home</a></li>
+          <li><a href=AboutMe.html>About me</a></li>
+          <li><a href=team.html>The Team</a></li>
+          <li><a href=Assignments.html>Week by Week</a></li>
+      </ul>
         </div>
       </div>
     </div>
@@ -35,7 +32,7 @@
               <br>
               <br>
               <br>
-              <h2>I'm a born and raised Idaho girl, I've never lived anywhere else. Sounds boring, but it wasn't. I've lived in seven different towns/cities within Idaho during that time, so I had a diverse Idaho upbringing!<br>I'm now a mom of two energetic boys who will also enjoy all Idaho has to offer throughout their childhood. I couldn't imagine anything better.<br>My day job, I briefly covered on my landing page I am an Application Development Analyst. I develop front end mini-app solutions for business process automation. I really enjoy my job and get super excited when I get to build things I've never built before. <br>Away from work I spend my time on School and my family. If I get any time for myself, I like to read fiction, snowboard, ski, dance, sing, and knit. </h2>  
+              <h2>I'm a born and raised Idaho girl, I've never lived anywhere else. Sounds boring, but it wasn't. I've lived in seven different towns/cities within Idaho during that time, so I had a diverse Idaho upbringing!<br><br>I'm now a mom of two energetic boys who will also enjoy all Idaho has to offer throughout their childhood. I couldn't imagine anything better.<br><br>My day job, I briefly covered on my landing page I am an Application Development Analyst. I develop front end mini-app solutions for business process automation. I really enjoy my job and get super excited when I get to build things I've never built before. <br><br>Away from work I spend my time on School and my family. If I get any time for myself, I like to read fiction, snowboard, ski, dance, sing, and knit. </h2>  
             </div>
           </div>
         </div>
