--- a/Assignments.html
+++ b/Assignments.html
@@ -11,14 +11,11 @@
     </head>
     <body>
         <div class="container-fluid">    
-        <ul class="a"><li><a href=finalhome.html class="menu ul">Final Landing</a></li>
-            <li><a href=AboutMe.html>About Me</a></li>
-            <li><a href=team.html>Our Team</a></li>
-            <li><a href=tags.html>Tag examples</a></li>
-            <li><a href=Calendar.html>Calendar examples</a></li>
-            <li><a href=tobuy.html>Classes and IDs</a></li>
-            <li><a href=JSFunctions.html>JavaScript Examples</a></li>
-        </ul>
+            <ul class="a"><li><a href=finalhome.html class="menu ul">Home</a></li>
+                <li><a href=AboutMe.html>About me</a></li>
+                <li><a href=team.html>The Team</a></li>
+                <li><a href=Assignments.html>Week by Week</a></li>
+            </ul>
         </div>
         <div class="container">
             <div class="jumbotron">
